k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: presentation-designer
  labels:
    name: presentation-designer
    environment: production
